Sheet style improvements and Misery Tracker (#178)
* Sheet styling tweaks.

* Add some classic mork borg fonts.

* Misery Tracker.

--- a/lang/en.json
+++ b/lang/en.json
@@ -25,6 +25,7 @@
   "MB.ArmorTierMedium": "Medium",
   "MB.ArmorTierNone": "None",
   "MB.Attack": "Attack",
+  "MB.AttackButtonTitle": "Attack with this weapon",
   "MB.AttackCritText": "Crit: x2 damage, target armor reduced one tier.",
   "MB.AttackFumbleText": "Fumble: Weapon breaks or is lost.",
   "MB.Base": "Base",
@@ -40,6 +41,7 @@
   "MB.ContainerEmptyHelpText": "Drag items into this container.",
   "MB.ContainerHolding": "Holding",
   "MB.ContainerSpace": "Container Space",
+  "MB.CreateNewFeat": "Create New Feat",
   "MB.CreateNewItem": "Create New Item",
   "MB.CreatureArmor": "Armor",
   "MB.CreatureAttack": "Attack",
@@ -50,6 +52,7 @@
   "MB.DamageReduction": "Damage Reduction",
   "MB.DamageReductionDie": "Damage Reduction Die",
   "MB.Defend": "Defend",
+  "MB.DefendButtonTitle": "Defend against an incoming attack",
   "MB.DefendCritText": "Crit: Gain free attack.",
   "MB.DefendFumbleText": "Fumble: Take x2 damage, armor reduced one tier.",
   "MB.Description": "Description",
@@ -64,6 +67,7 @@
   "MB.EquipAWeaponToAttack": "Equip a weapon to attack.",
   "MB.Equipment": "Equipment",
   "MB.Failure": "Failure",
+  "MB.Feats": "Feats",
   "MB.FollowerSpeciality": "Speciality",
   "MB.FollowerTrait": "Trait",
   "MB.FollowerValue": "Value",
@@ -121,12 +125,16 @@
   "MB.ItemWeaponType": "Weapon Type",
   "MB.JournalSheet": "MÖRK BORG Journal Sheet",
   "MB.Miseries": "Miseries",
+  "MB.MiseryActivated": "⛧⛧⛧ Misery ⛧⛧⛧",
+  "MB.MiseryCheck": "Misery Check",
+  "MB.MiseryNotActivated": "No misery, for now...",
   "MB.Miss": "MISS",
   "MB.Modified": "Modified",
   "MB.Morale": "Morale",
   "MB.MoraleFlees": "Flees",
   "MB.MoraleSurrenders": "Surrenders",
   "MB.Name": "Name",
+  "MB.NewFeat": "New feat",
   "MB.NoActiveEncounter": "No Active Encounter",
   "MB.NoEffect": "No effect",
   "MB.NoPowerUsesRemaining": "No Power uses remaining",
@@ -142,7 +150,7 @@
   "MB.RollMacro": "Roll Macro",
   "MB.Powers": "Powers",
   "MB.PowersPerDayText": "PRE+d4 times per day",
-  "MB.PowerUsesRemaining": "Uses Remaining",
+  "MB.PowerUsesRemaining": "Powers",
   "MB.Quantity": "Quantity",
   "MB.Reaction": "Reaction",
   "MB.ReactionAlmostFriendly": "Almost friendly",
@@ -150,6 +158,7 @@
   "MB.ReactionHelpful": "Helpful",
   "MB.ReactionIndifferent": "Indifferent",
   "MB.ReactionKill": "Kill!",
+  "MB.Reroll": "Reroll",
   "MB.Rest": "Rest",
   "MB.RestDialogDontEat": "Don't eat - Restore no stats.",
   "MB.RestDialogEat": "Eat - Restore stats as above, deduct food or drink.",
@@ -189,6 +198,8 @@
   "MB.SettingsHitAutomation": "Hit Automation",
   "MB.SettingsHitAutomationHint": "Enable auto-resolution of hits, misses, and damage rolls.",
   "MB.SettingsLegible": "Legible",
+  "MB.SettingsMiseryTrackerAnimations": "Misery Tracker Animations",
+  "MB.SettingsMiseryTrackerAnimationsHint": "Show animations on the Misery Tracker sheet?",
   "MB.SettingsWhiteOnBlackPink": "White on black (pink)",
   "MB.SettingsWhiteOnBlackWhite": "White on black (white)",
   "MB.SettingsWhiteOnBlackYellow": "White on black (yellow)",
@@ -210,9 +221,9 @@
   "MB.TabDescription": "Description",
   "MB.TabDetails": "Details",
   "MB.TabFeats": "Feats",
-  "MB.TabObituary": "Obituary",
-  "MB.TabPowers": "Powers",
-  "MB.TabTreasures": "Treasures",
+  "MB.TabObituary": "Background",
+  "MB.TabPowers": "Special",
+  "MB.TabTreasures": "Equipment",
   "MB.TabViolence": "Violence",
   "MB.Take": "Take",
   "MB.TargetArmor": "Target Armor",
@@ -226,10 +237,11 @@
   "MB.WeaponTypeMelee": "Melee",
   "MB.WeaponTypeRanged": "Ranged",
   "MB.Wield": "Wield",
+  "MB.WieldButtonTitle": "Wield this power",
   "MB.WieldAPower": "Wield a Power",
   "MB.WieldAPowerDizzy": "become dizzy for an hour and cannot use Powers during that time",
   "MB.WieldAPowerFumble": "Fumble - Roll an Arcane Catastrophe.",
-  "MB.WieldAPowerText": "PRE DR12, or -d2 HP and no Powers for 1 hr",
+  "MB.WieldAPowerText": "PRE+d4 times per day. PRE DR12 to wield or -d2 HP and no Powers for 1 hr.",
   "MB.YouAreHit": "You are Hit",
   "MB.YouHaveNoFeats": "You have no Feats",
   "MB.YouHaveNoScrolls": "You have no Scrolls"
