Misery tracker fixes.

--- a/lang/en.json
+++ b/lang/en.json
@@ -30,6 +30,7 @@
   "MB.AttackFumbleText": "Fumble: Weapon breaks or is lost.",
   "MB.Base": "Base",
   "MB.Broken": "Broken",
+  "MB.BurnTheBook": "Burn the book.",
   "MB.Cancel": "Cancel",
   "MB.CarryWeight": "Carry Weight",
   "MB.Carrying": "Carrying",
@@ -126,6 +127,11 @@
   "MB.JournalSheet": "MÖRK BORG Journal Sheet",
   "MB.Miseries": "Miseries",
   "MB.MiseryActivated": "⛧⛧⛧ Misery ⛧⛧⛧",
+  "MB.MiseryDie100": "Years of pain (d100)",
+  "MB.MiseryDie20": "A bleak half-year (d20)",
+  "MB.MiseryDie10": "A fall in anguish (d10)",
+  "MB.MiseryDie6": "A cruel month (d6)",
+  "MB.MiseryDie2": "The end is nigh! (d2)",
   "MB.MiseryCheck": "Misery Check",
   "MB.MiseryNotActivated": "No misery, for now...",
   "MB.Miss": "MISS",
@@ -151,6 +157,7 @@
   "MB.Powers": "Powers",
   "MB.PowersPerDayText": "PRE+d4 times per day",
   "MB.PowerUsesRemaining": "Powers",
+  "MB.Psalm": "Psalm",
   "MB.Quantity": "Quantity",
   "MB.Reaction": "Reaction",
   "MB.ReactionAlmostFriendly": "Almost friendly",
@@ -171,6 +178,7 @@
   "MB.Roll": "Roll",
   "MB.Rolls": "Rolls",
   "MB.RollFormula": "Roll Formula",
+  "MB.RollForMisery": "Roll for Misery",
   "MB.RollLabel": "Roll Label",
   "MB.RollPartyInitiative": "Roll Party Initiative",
   "MB.Round": "round",
@@ -206,6 +214,8 @@
   "MB.SettingsWhiteOnPinkWhite": "White on pink (white)",
   "MB.SettingsTrackAmmo": "Track Ammo",
   "MB.SettingsTrackAmmoHint": "Select and autodecrement ammo for ranged weapons.",
+  "MB.SeventhMiseryWillAlwaysBe": "The seventh misery will always be 7:7",
+  "MB.SeventhSealIsBroken": "The seventh seal is broken for the seventh and final time. The game and your lives end here.",
   "MB.SheetClassCharacter": "Default Mork Borg Character Sheet",
   "MB.SheetClassContainer": "Default Mork Borg Container Sheet",
   "MB.SheetClassCreature": "Default Mork Borg Creature Sheet",
@@ -232,7 +242,9 @@
   "MB.Tier": "Tier",
   "MB.Title": "MÖRK BORG",
   "MB.Type": "Type",
+  "MB.Verse": "Verse",
   "MB.Vs": "vs",
+  "MB.WhenWillAllThisAgonyEnd": "When will all this agony end?",
   "MB.WeaponTable": "Weapon Table",
   "MB.WeaponTypeMelee": "Melee",
   "MB.WeaponTypeRanged": "Ranged",
