--- a/lang/en.json
+++ b/lang/en.json
@@ -124,7 +124,7 @@
   "MB.ItemUnequipped": "Unequipped",
   "MB.ItemUsesAmmo": "Uses Ammo",
   "MB.ItemWeaponType": "Weapon Type",
-  "MB.JournalSheet": "MÖRK BORG Journal Sheet",
+  "MB.JournalSheet": "CRYS BORG Journal Sheet",
   "MB.Miseries": "Miseries",
   "MB.MiseryActivated": "⛧⛧⛧ Misery ⛧⛧⛧",
   "MB.MiseryDie100": "Years of pain (d100)",
@@ -145,7 +145,7 @@
   "MB.NoEffect": "No effect",
   "MB.NoPowerUsesRemaining": "No Power uses remaining",
   "MB.Ok": "Ok",
-  "MB.Omens": "Omens",
+  "MB.Omens": "Luck",
   "MB.OmensHelpText": "Max damage, re-roll, -d6 damage, DR -4, no crit/fumble",
   "MB.Outcome": "Outcome",
   "MB.Party": "Party",
@@ -186,7 +186,9 @@
   "MB.ScrollTypeSacred": "Sacred Scroll",
   "MB.ScrollTypeTablet": "Tablet of Ochre Obscurity",
   "MB.ScrollTypeUnclean": "Unclean Scroll",
-  "MB.ScvmfactoryChooseFromClasses": "Choose from Classes",
+  "MB.ScvmfactoryChooseFromClasses": "Choose your Class",
+  "MB.ScvmfactoryChooseFromStandardClasses": "Choose from Mörk Borg",
+  "MB.ScvmfactoryChooseFromNewClasses": "Choose from Goblin Gonzo",
   "MB.ScvmfactoryMakeScvm": "Make Scvm",
   "MB.ScvmfactoryToggleAll": "Toggle All",
   "MB.ScvmfactoryToggleNone": "Toggle None",
@@ -196,6 +198,9 @@
   "MB.SettingsDeleteZeroQuantity": "Delete Zero Quantity",
   "MB.SettingsDeleteZeroQuantityHint": "Automatically delete items when quantity decremented to zero",
   "MB.SettingsBlackletter": "Blackletter",
+  "MB.SettingsCBFont": "CrysBorg Signature",
+  "MB.SettingsCrysBorgSignature": "Crys Borg Signature Style",
+  "MB.SettingsCrysBorgSignatureAlt": "Crys Borg Signature Style Alternative",
   "MB.SettingsBlackOnWhiteBlack": "Black on white (black)",
   "MB.SettingsBlackOnYellowWhite": "Black on yellow (white)",
   "MB.SettingsColorScheme": "Color Scheme",
@@ -212,17 +217,19 @@
   "MB.SettingsWhiteOnBlackWhite": "White on black (white)",
   "MB.SettingsWhiteOnBlackYellow": "White on black (yellow)",
   "MB.SettingsWhiteOnPinkWhite": "White on pink (white)",
+  "MB.SettingsGoblinGonzo": "Goblin Gonzo",
   "MB.SettingsTrackAmmo": "Track Ammo",
   "MB.SettingsTrackAmmoHint": "Select and autodecrement ammo for ranged weapons.",
   "MB.SeventhMiseryWillAlwaysBe": "The seventh misery will always be 7:7",
   "MB.SeventhSealIsBroken": "The seventh seal is broken for the seventh and final time. The game and your lives end here.",
-  "MB.SheetClassCharacter": "Default Mork Borg Character Sheet",
-  "MB.SheetClassContainer": "Default Mork Borg Container Sheet",
-  "MB.SheetClassCreature": "Default Mork Borg Creature Sheet",
-  "MB.SheetClassFollower": "Default Mork Borg Follower Sheet",
+  "MB.SheetClassCharacter": "Default crys borg Character Sheet",
+  "MB.SheetClassContainer": "Default crys borg Container Sheet",
+  "MB.SheetClassCreature": "Default crys borg Creature Sheet",
+  "MB.SheetClassFollower": "Default crys borg Follower Sheet",
   "MB.Shield": "Shield",
   "MB.ShieldUseText": "-1 damage, or break to ignore one attack",
   "MB.Silver": "Silver",
+  "MB.Source": "Source",
   "MB.StandsFirm": "Stands firm",
   "MB.Starting": "Starting",
   "MB.Starvation": "Starvation",
@@ -240,7 +247,7 @@
   "MB.Test": "Test",
   "MB.TheScvmfactory": "The Scvmfactory",
   "MB.Tier": "Tier",
-  "MB.Title": "MÖRK BORG",
+  "MB.Title": "CRYS BORG",
   "MB.Type": "Type",
   "MB.Verse": "Verse",
   "MB.Vs": "vs",
