--- a/lang/de.json
+++ b/lang/de.json
@@ -1,129 +1,129 @@
 {
-  "MB.Abilities": "Fähigkeiten",
-  "MB.AbilityAgility": "Agiliät",
+  "MB.Abilities": "Faehigkeiten",
+  "MB.AbilityAgility": "Agiliaet",
   "MB.AbilityAgilityAbbrev": "AGI",
-  "MB.AbilityPresence": "Ausstrahlung",
-  "MB.AbilityPresenceAbbrev": "AUS",
-  "MB.AbilityStrength": "Stärke",
+  "MB.AbilityPresence": "Praesenz",
+  "MB.AbilityPresenceAbbrev": "PRA",
+  "MB.AbilityStrength": "Staerke",
   "MB.AbilityStrengthAbbrev": "STR",
-  "MB.AbilityToughness": "Zähigkeit",
-  "MB.AbilityToughnessAbbrev": "ZÄH",
+  "MB.AbilityToughness": "Zaehigkeit",
+  "MB.AbilityToughnessAbbrev": "ZAE",
   "MB.ActorNotFound": "Akteur nicht gefunden",
   "MB.ActorNotInEncounter": "Dieser Akteur ist nicht Teil des Kampfgeschehens",
   "MB.Add": "Hinzufügen",
-  "MB.AdditionalAbilities": "Additional Abilities",
-  "MB.AdditionalAbilitiesHint": "Comma separated list of abilities, e.g 'Knowledge,Magic,Sword'",
-  "MB.AllowedScvmClassesEdit": "Edit allowed classes",
-  "MB.AllowedScvmClassesSelect": "Select allowed classes",
+  "MB.AdditionalAbilities": "Zusaetzliche Faehigkeiten",
+  "MB.AdditionalAbilitiesHint": "Kommas unterteilt die Liste der Faehigkeiten, z.B. 'Wissen, Magie, Schwert'",
+  "MB.AllowedScvmClassesEdit": "Erlaubte Klassen editieren",
+  "MB.AllowedScvmClassesSelect": "Erlaubte Klassen auswaehlen",
   "MB.AlternateName": "Alternativer Name",
-  "MB.Armor": "Rüstung",
+  "MB.Armor": "Ruestung",
   "MB.ArmorCurrentTier": "Momentane Stufe",
   "MB.ArmorMaxTier": "Maximale Stufe",
-  "MB.ArmorTable": "Rüstungstabelle",
+  "MB.ArmorTable": "Ruestungstabelle",
   "MB.ArmorTierHeavy": "Schwer",
   "MB.ArmorTierLight": "Leicht",
   "MB.ArmorTierMedium": "Mittel",
   "MB.ArmorTierNone": "Keine",
-  "MB.Attack": "Attacke",
-  "MB.AttackCritText": "Krit: x2 Schaden, Rüstung des Ziel um eine Stufe reduziert.",
-  "MB.AttackFumbleText": "Ungeschicktheit: Waffe zerbricht oder geht verloren.",
+  "MB.Attack": "Angriff",
+  "MB.AttackCritText": "Krit: x2 Schaden, Ruestung des Ziel wird um eine Stufe reduziert.",
+  "MB.AttackFumbleText": "Patzer: Waffe zerbricht oder geht verloren.",
   "MB.Base": "Basis",
   "MB.Broken": "Gebrochen",
-  "MB.Cancel": "Cancel",
+  "MB.Cancel": "Abbruch",
   "MB.CarryWeight": "Traglast",
   "MB.Carrying": "Getragen",
-  "MB.CarryingCapacity": "Tragkapazität",
-  "MB.CarryingRule": "STR+8 tragbare Gegenstände oder DR+2 on AGI/STR Probe.",
-  "MB.CarryingRuleNoPenalty": "STR+8 max carried items.",
+  "MB.CarryingCapacity": "Tragkapazitaet",
+  "MB.CarryingRule": "STR+8 tragbare Gegenstände oder SG+2 bei jeder AGI/STR Probe.",
+  "MB.CarryingRuleNoPenalty": "STR+8 Objekte können max. getragen werden.",
   "MB.Class": "Klasse",
-  "MB.ClassAbilities": "Fähigkeiten",
-  "MB.ContainerEmptyHelpText": "Drag items into this container.",
-  "MB.ContainerHolding": "Holding",
+  "MB.ClassAbilities": "Faehigkeiten",
+  "MB.ContainerEmptyHelpText": "Ziehe Objekte in diesen Container.",
+  "MB.ContainerHolding": "Halten",
   "MB.ContainerSpace": "Maße",
-  "MB.CreateNewItem": "Erstelle neues Item",
-  "MB.CreatureArmor": "Rüstung",
-  "MB.CreatureAttack": "Attacke",
+  "MB.CreateNewItem": "Erstelle neues Objekt",
+  "MB.CreatureArmor": "Ruestung",
+  "MB.CreatureAttack": "Angriff",
   "MB.CreatureSpecial": "Spezial",
   "MB.CriticalSuccess": "Kritischer Erfolg",
   "MB.Damage": "Schaden",
-  "MB.DamageDie": "Schadenswürfel",
+  "MB.DamageDie": "Schadenswuerfel",
   "MB.DamageReduction": "Schadensreduktion",
-  "MB.DamageReductionDie": "Schadensreduktionswürfel",
+  "MB.DamageReductionDie": "Schadensreduktionswuerfel",
   "MB.Defend": "Verteidigen",
-  "MB.DefendCritText": "Krit: erhalte freie Attacke.",
-  "MB.DefendFumbleText": "Ungeschicktheit: Erleide x2 Schaden, Rüstung um eine Stufe reduziert.",
+  "MB.DefendCritText": "Krit: erhalte eine freie Attacke.",
+  "MB.DefendFumbleText": "Patzer: Erleide x2 Schaden, deine Ruestung wird um eine Stufe reduziert.",
   "MB.Description": "Beschreibung",
-  "MB.Dice": "Würfel",
+  "MB.Dice": "Wuerfel",
   "MB.Dodge": "Ausweichen",
-  "MB.DR": "DR",
-  "MB.EditAllowedScvmClassesMenu": "Allowed classes",
-  "MB.EditAllowedScvmClassesMenuHint": "Edit the allowed classes in the character generator.",
-  "MB.EditAllowedScvmClassesMenuButtonLabel": "Edit",
-  "MB.Encumbered": "Überladen",
-  "MB.EquipArmorToAbsorb": "Lege eine Rüstung an um Schaden zu verringern.",
-  "MB.EquipAWeaponToAttack": "Lege eine Waffe an um anzugreifen.",
-  "MB.Equipment": "Ausrüstung",
+  "MB.DR": "SG",
+  "MB.EditAllowedScvmClassesMenu": "Erlaubte KLassen",
+  "MB.EditAllowedScvmClassesMenuHint": "Bearbeite die erlaubten Klassen im Charaktergenerator.",
+  "MB.EditAllowedScvmClassesMenuButtonLabel": "Bearbeiten",
+  "MB.Encumbered": "Ueberladen",
+  "MB.EquipArmorToAbsorb": "Lege eine Ruestung an um Schaden zu verringern.",
+  "MB.EquipAWeaponToAttack": "Lege eine Waffe an um angreifen zu koennen.",
+  "MB.Equipment": "Ausruestung",
   "MB.Failure": "Fehlschlag",
   "MB.FollowerSpeciality": "Spezialgebiet",
   "MB.FollowerTrait": "Merkmal",
   "MB.FollowerValue": "Wert",
   "MB.GetBetter": "Steige auf",
-  "MB.HandedOne": "Einhändig",
-  "MB.HandedTwo": "Beidhändig",
+  "MB.HandedOne": "Einhaendig",
+  "MB.HandedTwo": "Beidhaendig",
   "MB.Heal": "Heilung",
-  "MB.Hit": "HIT",
+  "MB.Hit": "TREFFER",
   "MB.HitPoints": "Lebenspunkte",
-  "MB.Hour": "hour",
-  "MB.Hours": "hours",
-  "MB.HP": "HP",
-  "MB.IncomingAttack": "Eingehende Attacke",
+  "MB.Hour": "Stunde",
+  "MB.Hours": "Stunden",
+  "MB.HP": "LP",
+  "MB.IncomingAttack": "Eingehender Angriff",
   "MB.Individual": "Individuell",
   "MB.Infection": "Infektion",
   "MB.Initiative": "Initiative",
-  "MB.InitiativeEnemiesBegin": "Gegner beginnen",
+  "MB.InitiativeEnemiesBegin": "die Gegner beginnen",
   "MB.InitiativePlayerCharactersBegin": "Spieler Charaktere beginnen",
   "MB.Is": "ist",
-  "MB.Inflict": "Zufügen",
-  "MB.Items": "Items",
-  "MB.ItemAgilityDRModifier": "Agilität DR Modifikator",
-  "MB.ItemCapacity": "Kapazität",
-  "MB.ItemCarried": "Carried",
-  "MB.ItemCreate": "Erstelle Item",
-  "MB.ItemCritOn": "Crit On",
-  "MB.ItemDamageDie": "Schadenswürfel",
-  "MB.ItemDamageReductionDie": "Schadensreduktionswürfel",
-  "MB.ItemDefenseDRModifier": "Verteidigungs DR Modifikator",
-  "MB.ItemDelete": "Lösche Item",
-  "MB.ItemDeleteMessage": "Are you sure you want to delete the container and all the items?",
-  "MB.ItemDropped": "Dropped",
-  "MB.ItemEdit": "Bearbeite Item",
-  "MB.ItemEquipped": "Ausgerüstet",
-  "MB.ItemFumbleOn": "Fumble On",
-  "MB.ItemHanded": "Geführt",
-  "MB.ItemName": "Item Name",
+  "MB.Inflict": "Zufuegen",
+  "MB.Items": "Objekte",
+  "MB.ItemAgilityDRModifier": "Agilitaet SG Modifikator",
+  "MB.ItemCapacity": "Kapazitaet",
+  "MB.ItemCarried": "Getragen",
+  "MB.ItemCreate": "Erstelle Objekt",
+  "MB.ItemCritOn": "Krit An",
+  "MB.ItemDamageDie": "Schadenswuerfel",
+  "MB.ItemDamageReductionDie": "Schadensreduktionswuerfel",
+  "MB.ItemDefenseDRModifier": "Verteidigungs SG Modifikator",
+  "MB.ItemDelete": "Lösche Objekt",
+  "MB.ItemDeleteMessage": "Bist du sicher, dass du den Container und alle Elemente entfernen willst?",
+  "MB.ItemDropped": "Fallengelassen",
+  "MB.ItemEdit": "Bearbeite Objekt",
+  "MB.ItemEquipped": "Ausgeruestet",
+  "MB.ItemFumbleOn": "Patzer An",
+  "MB.ItemHanded": "Gefuehrt",
+  "MB.ItemName": "Objekt Name",
   "MB.ItemNotFound": "Artikel nicht gefunden",
   "MB.ItemPrice": "Preis",
   "MB.ItemScrollType": "Schriftrollentyp",
-  "MB.ItemTypeAmmo": "Ammo",
-  "MB.ItemTypeArmor": "Rüstung",
-  "MB.ItemTypeArmorPlural": "Rüstungen",
+  "MB.ItemTypeAmmo": "Munition",
+  "MB.ItemTypeArmor": "Ruestung",
+  "MB.ItemTypeArmorPlural": "Ruestungen",
   "MB.ItemTypeClass": "Klasse",
-  "MB.ItemTypeContainer": "Behälter",
+  "MB.ItemTypeContainer": "Behaelter",
   "MB.ItemTypeFeat": "Tat",
-  "MB.ItemTypeMisc": "Sonstig",
+  "MB.ItemTypeMisc": "Sonstige",
   "MB.ItemTypeScroll": "Schriftrolle",
   "MB.ItemTypeScrollPlural": "Schriftrollen",
   "MB.ItemTypeShield": "Schild",
   "MB.ItemTypeWeapon": "Waffe",
   "MB.ItemTypeWeaponPlural": "Waffen",
-  "MB.ItemUnequipped": "Unausgerüstet",
-  "MB.ItemUsesAmmo": "Uses Ammo",
+  "MB.ItemUnequipped": "Unausgeruestet",
+  "MB.ItemUsesAmmo": "Benutzt Munition",
   "MB.ItemWeaponType": "Waffentyp",
-  "MB.Miseries": "Miserien",
-  "MB.Miss": "MISS",
+  "MB.Miseries": "Misere",
+  "MB.Miss": "DANEBEN",
   "MB.Modified": "Modifiziert",
   "MB.Morale": "Moral",
-  "MB.MoraleFlees": "Flüchtet",
+  "MB.MoraleFlees": "Fluechtet",
   "MB.MoraleSurrenders": "Gibt auf",
   "MB.Name": "Name",
   "MB.NoActiveEncounter": "Keine aktive Begegnung",
@@ -131,40 +131,40 @@
   "MB.NoPowerUsesRemaining": "Keine Macht übrig",
   "MB.Ok": "Ok",
   "MB.Omens": "Omen",
-  "MB.OmensHelpText": "Max damage, re-roll, -d6 damage, DR -4, no crit/fumble",
+  "MB.OmensHelpText": "Max Schaden, erneut wuerfeln, -W6 Schaden, SG -4, no Krit/Patzer",
   "MB.Outcome": "Auswirkung",
   "MB.Party": "Party",
   "MB.PartyInitiative": "Party Initiative",
   "MB.PerDay": "Pro Tag",
   "MB.PerRest": "Pro Rast",
-  "MB.RollMacro": "Würfel Macro",
-  "MB.Powers": "Mächte",
-  "MB.PowersPerDayText": "AUS+d4 mal pro Tag",
+  "MB.RollMacro": "Wuerfel Macro",
+  "MB.Powers": "Maechte",
+  "MB.PowersPerDayText": "PRA+W4 mal pro Tag",
   "MB.PowerUsesRemaining": "Nutzungen verbleibend",
   "MB.Quantity": "Anzahl",
   "MB.Reaction": "Reaktion",
   "MB.ReactionAlmostFriendly": "Nahezu freundlich",
-  "MB.ReactionAngered": "Erzürnt",
+  "MB.ReactionAngered": "Erzuernt",
   "MB.ReactionHelpful": "Hilfsbereit",
-  "MB.ReactionIndifferent": "Gleichgültig",
-  "MB.ReactionKill": "Töten!",
+  "MB.ReactionIndifferent": "Gleichgueltig",
+  "MB.ReactionKill": "Toeten!",
   "MB.Rest": "Rasten",
   "MB.RestDialogDontEat": "Keine Nahrungsaufnahme - regeneriere keine Attribute.",
-  "MB.RestDialogEat": "Iss - Regeneriere Attribute wie oben, streiche Rationen.",
+  "MB.RestDialogEat": "Iss - Regeneriere Attribute wie oben, streiche Rationen ab.",
   "MB.RestDialogFoodAndDrink": "Essen und Trinken",
-  "MB.RestDialogInfected": "Infiziert - regeneriere keine Attribute, verliere d6 HP pro Tag.",
-  "MB.RestDialogLength": "Rastlänge",
-  "MB.RestDialogLengthLong": "Lang - Nacht durchgeschlafen. Regeneriere d6 HP, erhalte Omen zurück falls aufgebraucht, erhalte PRE+d4 Nutzungen von Kräften für den Tag.",
-  "MB.RestDialogLengthShort": "Kurz - Atme durch, trink etwas. Regeneriere d4 HP.",
-  "MB.RestDialogStarve": "Verhungern - 2+ Tage ohne Essen oder Trinken. Regeneriere keine Attribute, verliere d4 HP/Tag.",
+  "MB.RestDialogInfected": "Infiziert - regeneriere keine Attribute, verliere W6 LP pro Tag.",
+  "MB.RestDialogLength": "Rastlaenge",
+  "MB.RestDialogLengthLong": "Lang - Nacht durchgeschlafen. Regeneriere W6 LP, erhalte Omen zurück falls aufgebraucht, erhalte PRA+W4 Nutzungen von Kraeften für den Tag.",
+  "MB.RestDialogLengthShort": "Kurz - Atme durch, trink etwas. Regeneriere W4 LP.",
+  "MB.RestDialogStarve": "Hungern - 2+ Tage ohne Essen oder Trinken. Regeneriere keine Attribute, verliere W4 LP/Tag.",
   "MB.Roll": "Wurf",
-  "MB.Rolls": "Würfe",
-  "MB.RollDamage": "Würfelst Schaden",
+  "MB.Rolls": "Wuerfe",
+  "MB.RollDamage": "Wuerfele Schaden",
   "MB.RollFormula": "Wurf Formel",
   "MB.RollLabel": "Wurf Label",
   "MB.Round": "Runde",
   "MB.Rounds": "Runden",
-  "MB.RollPartyInitiative": "Würfle Party Initiative",
+  "MB.RollPartyInitiative": "Wuerfle Party Initiative",
   "MB.ScrollTypeSacred": "Heilige Schriftrolle",
   "MB.ScrollTypeTablet": "Schrifttafel der ockerfarbener Dunkelheit",
   "MB.ScrollTypeUnclean": "Unreine Schriftrolle",
@@ -172,32 +172,32 @@
   "MB.ScvmfactoryMakeScvm": "Erstelle Scvm",
   "MB.ScvmfactoryToggleAll": "Aktiviere alle",
   "MB.ScvmfactoryToggleNone": "Aktviere keine",
-  "MB.ScvmfactoryWarning": "Zerstöre diesen Charakter, und ersetzte ihn mit einem neuen Scvm? WARNUNG: Kann nicht rückgängig gemacht werden!",
-  "MB.SettingsApplyOvercapacityPenalty": "Apply Overcapacity Penalty",
-  "MB.SettingsApplyOvercapacityPenaltyHint": "+2 STR/AGI DR when carrying more than STR+8 items",
+  "MB.ScvmfactoryWarning": "Zerstöre diesen Charakter, und ersetzte ihn mit einem neuen Scvm? WARNUNG: Kann nicht rückgaengig gemacht werden!",
+  "MB.SettingsApplyOvercapacityPenalty": "Strafe fuer Ueberkapazitaet anwenden",
+  "MB.SettingsApplyOvercapacityPenaltyHint": "+2 STR/AGI SG beim Transport von mehr als STR+8 Objekten",
   "MB.SettingsBlackletter": "Schwarze Schrift",
   "MB.SettingsBlackOnWhiteBlack": "Schwarz auf Weiß (Schwarz)",
   "MB.SettingsBlackOnYellowWhite": "Schwarz auf Weiß (Weiß)",
   "MB.SettingsColorScheme": "Farbschema",
-  "MB.SettingsColorSchemeHint": "Wähle ein Farbschema für das UI.",
+  "MB.SettingsColorSchemeHint": "Waehle ein Farbschema für das UI.",
   "MB.SettingsFontScheme": "Font Schema",
-  "MB.SettingsFontSchemeHint": "Wähle ein Font Schema für das UI.",
+  "MB.SettingsFontSchemeHint": "Waehle ein Font Schema für das UI.",
   "MB.SettingsFoundryDefault": "Foundry Standard",
-  "MB.SettingsHitAutomation": "Hit Automation",
-  "MB.SettingsHitAutomationHint": "Enable auto-resolution of hits, misses, and damage rolls.",
+  "MB.SettingsHitAutomation": "Treffer Automation",
+  "MB.SettingsHitAutomationHint": "Automatische Verarbeitung von Treffern, Fehltreffern und Schadenwuerfen einschalten.",
   "MB.SettingsLegible": "Lesbar",
-  "MB.SettingsTrackAmmo": "Track Ammo",
-  "MB.SettingsTrackAmmoHint": "Select and autodecrement ammo for ranged weapons.",
+  "MB.SettingsTrackAmmo": "Munition anzeigen",
+  "MB.SettingsTrackAmmoHint": "Auswahl und automatische Verringerung der Munition fuer Fernkampfwaffen.",
   "MB.SettingsWhiteOnBlackPink": "Weiß auf Schwarz (Pink)",
   "MB.SettingsWhiteOnBlackWhite": "Weiß auf Schwarz (Weiß)",
   "MB.SettingsWhiteOnBlackYellow": "Weiß auf Schwarz (Gelb)",
   "MB.SettingsWhiteOnPinkWhite": "Weiß auf Pink (Weiß)",
   "MB.SheetClassCharacter": "Standard Mork Borg Charakterbogen",
-  "MB.SheetClassContainer": "Standard Mork Borg Behälterbogen",
+  "MB.SheetClassContainer": "Standard Mork Borg Behaelterbogen",
   "MB.SheetClassCreature": "Standard Mork Borg Kreaturenbogen",
   "MB.SheetClassFollower": "Standard Mork Borg Begleiterbogen",
   "MB.Shield": "Schild",
-  "MB.ShieldUseText": "-1 Schaden, oder zerstöre es um Schaden zu ignorieren",
+  "MB.ShieldUseText": "-1 Schaden, oder zerstoere es um Schaden zu ignorieren",
   "MB.Silver": "Silber",
   "MB.StandsFirm": "Standhaft bleiben",
   "MB.Starting": "Startet",
@@ -207,27 +207,27 @@
   "MB.TabDescription": "Beschreibung",
   "MB.TabDetails": "Details",
   "MB.TabFeats": "Taten",
-  "MB.TabObituary": "Todesanzeige",
-  "MB.TabPowers": "Mächte",
-  "MB.TabTreasures": "Schätze",
+  "MB.TabObituary": "Deine Geschichte",
+  "MB.TabPowers": "Maechte",
+  "MB.TabTreasures": "Schaetze",
   "MB.TabViolence": "Gewalt",
   "MB.Take": "Nimm",
-  "MB.TargetArmor": "Zielrüstung",
+  "MB.TargetArmor": "Zielruestung",
   "MB.Test": "Probe",
   "MB.TheScvmfactory": "Die Scvmfactory",
   "MB.Tier": "Stufe",
   "MB.Title": "MÖRK BORG",
   "MB.Type": "Typ",
-  "MB.Vs": "vs",
+  "MB.Vs": "gegen",
   "MB.WeaponTable": "Waffentabelle",
   "MB.WeaponTypeMelee": "Nahkampf",
   "MB.WeaponTypeRanged": "Fernkampf",
-  "MB.Wield": "ausüben",
+  "MB.Wield": "ausueben",
   "MB.WieldAPower": "wirke Macht aus",
-  "MB.WieldAPowerFumble": "Ungeschicktheit - Rolle eine Arkane Katastrophe.",
-  "MB.WieldAPowerText": "AUS DR12, oder -d2 HP und keine Machtausübung für eine Stunde",
-  "MB.WieldAPowerDizzy": "sei benommen und übe keine Macht für eine Stunde aus",
+  "MB.WieldAPowerFumble": "Patzer - Rolle eine Arkane Katastrophe.",
+  "MB.WieldAPowerText": "PRA SG12, oder -W2 LP und keine Machtausuebung für eine Stunde",
+  "MB.WieldAPowerDizzy": "du bist benommen und uebst keine Macht für eine Stunde aus",
   "MB.YouAreHit": "Du bist getroffen",
-  "MB.YouHaveNoFeats": "Du hast keine Taten übrig",
+  "MB.YouHaveNoFeats": "Du hast keine Taten uebrig",
   "MB.YouHaveNoScrolls": "Du hast keine Schriftrollen"
 }
